--- a/Student_Project/.project
+++ b/Student_Project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>student</name>
+	<name>Student_Project</name>
 	<comment></comment>
 	<projects>
 	</projects>
