--- a/Student/.classpath
+++ b/Student/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Atulk/Downloads/jar_files/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="D:/HOME/Study/PROGRAMMING/Advance-JAVA/mysql-connector-j-8.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
