--- a/HQLemployee/.project
+++ b/HQLemployee/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StudentP</name>
+	<name>HQLemployee</name>
 	<comment></comment>
 	<projects>
 	</projects>
