--- a/user-management-app/pom.xml
+++ b/user-management-app/pom.xml
@@ -1,14 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.Home.servlets</groupId>
-  <artifactId>hotelManagement</artifactId>
+  <groupId>com.atul</groupId>
+  <artifactId>user-management-app</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>hotelManagement Maven Webapp</name>
+  <name>user-management-app Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-	  <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	  
+	   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
@@ -53,7 +54,6 @@
     <version>1.2.5</version>
     <scope>runtime</scope>
 </dependency>
-
 	  
     <dependency>
       <groupId>junit</groupId>
@@ -63,6 +63,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>hotelManagement</finalName>
+    <finalName>user-management-app</finalName>
   </build>
 </project>
